# VotAI

./: .env-example  README.md  compose.yml  pyproject.toml
app/: startup.py
app/api/: dependencies.py
app/api/authentication/: controller.py  router.py  schemas.py
app/api/poll/: controller.py  router.py  schemas.py
app/api/user/: controller.py  router.py  schemas.py
app/utils/: auth.py  oauth_client.py  redis_client.py  settings.py
docs/: OAuth.md
